changed user to manager
